Add section about Jupyter for Research
per Avi

--- a/templates/login.html
+++ b/templates/login.html
@@ -83,6 +83,15 @@
 
   <div class="col-md-8 col-md-offset-2 questions">
     <div>
+      <h4>Are you interested in using Jupyter for Research?</h4>
+
+      This instance of JupyterHub is meant to be a teaching tool for UofT instructors and students. 
+      If you are a UofT Researcher looking to use Jupyter in a non-teaching context, then please contact 
+      <a href="https://www.scinethpc.ca">SciNet</a>, the University of Toronto’s supercomputing centre to learn more about their 
+      <a href="https://docs.scinet.utoronto.ca/index.php/Jupyter_Hub">Jupyter for Research</a> services.
+
+    </div>
+    <div>
       <h4>What is a Jupyter Notebook?</h4>
 
       <a href="https://jupyter.org">Jupyter Notebook</a> is an open-source web application that allows you to create and
