--- a/templates/error.html
+++ b/templates/error.html
@@ -17,7 +17,7 @@
 <div class="error">
 	<div class="info">
 		<i class="fa fa-info-circle"></i>
-	  	If your email address has <b>NOT</b> been added to the list of allowed users for this hub, please <b>contact</b> the hub administrators.
+	  	Looks like you have <b>NOT</b> been added to the list of allowed users for this hub. Please contact the hub administrators.
 	</div>
 </div>
 {% else %}
