Make the ticketing service clickable

--- a/templates/login.html
+++ b/templates/login.html
@@ -56,7 +56,7 @@
   <div class="info text-center">
     <br>
     <i class="fa fa-info-circle"></i>
-      Use <a>https://uoft.me/jupyterhelp﻿</a> to open tickets for support questions.
+      Use <a href="https://uoft.me/jupyterhelp">﻿JupyterHelp</a> to open tickets for support questions.
   </div>
 
   <div class="col-md-8 col-md-offset-2 details">
