--- a/extra-assets/css/login.css
+++ b/extra-assets/css/login.css
@@ -36,14 +36,25 @@
     color: grey;
 }
 
+.announcements {
+    margin-top: 10px;
+}
+
+.announcements > div {
+    margin-top: 15px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    border: 2px dotted orange;
+}
+
 .questions {
     margin-top: 12px;
 }
 
 .questions > div {
     margin-top: 32px;
-    padding-top: 16px;
-    border-top: 2px lightgrey dotted;
+    padding-bottom: 32px;
+    border-bottom: 2px lightgrey dotted;
 }
 
 .footer {
