--- a/templates/login.html
+++ b/templates/login.html
@@ -87,6 +87,15 @@
 
   </div>
 
+  <div class="col-md-8 col-md-offset-2 announcements">
+    <div>
+      <h4>* NEW * Jupyter Support Website</h4>
+
+      We have started a JupyterHub support website with documentation and tip sheets, and we will be adding more on an
+      ongoing basis. To reach the support site, please visit: <a href="https://act.utoronto.ca/jupyterhub-support">https://act.utoronto.ca/jupyterhub-support/</a>.
+    </div>
+  </div>
+
   <div class="col-md-8 col-md-offset-2 questions">
     <div>
       <h4>Are you interested in using Jupyter for Research?</h4>
