Try make announcements a list - have no idea if this works

--- a/templates/login.html
+++ b/templates/login.html
@@ -83,12 +83,9 @@
   </div>
 
   <div class="col-md-8 col-md-offset-2 announcements">
-    <div>
-      <h4>{{ custom.announcement.header }}</h4>
-
-      {{ custom.announcement.text }}
-    </div>
+    {{ custom.announcements }}
   </div>
+
 
   <div class="col-md-8 col-md-offset-2 questions">
     <div>
