--- a/templates/login.html
+++ b/templates/login.html
@@ -83,7 +83,7 @@
   </div>
 
   <div class="col-md-8 col-md-offset-2 announcements">
-    {{ custom.announcements }}
+    {{ custom.announcements | safe }}
   </div>
 
 
