--- a/extra-assets/css/login.css
+++ b/extra-assets/css/login.css
@@ -40,12 +40,10 @@
     margin-top: 10px;
 }
 
-.announcements > div {
+.announcement-details > div {
     margin-top: 15px;
     padding-top: 5px;
     padding-bottom: 5px;
-    padding-left: 5px;
-    padding-right: 5px;
     border: 2px dotted orange;
 }
 
