Move announements to the right

--- a/extra-assets/css/login.css
+++ b/extra-assets/css/login.css
@@ -40,7 +40,7 @@
     margin-top: 10px;
 }
 
-.announcement-details > div {
+.announcements > div {
     margin-top: 15px;
     padding-top: 5px;
     padding-bottom: 5px;
