Make announcements optional

--- a/templates/login.html
+++ b/templates/login.html
@@ -82,13 +82,15 @@
 
   </div>
 
-  <div class="col-md-8 col-md-offset-2 announcements" >
-    {% for announcement in custom.announcements %}
-    <div class="announcements-text">
-      {{ announcement | safe }}
+  {% if custom.announcements is defined %}
+    <div class="col-md-8 col-md-offset-2 announcements" >
+      {% for announcement in custom.announcements %}
+      <div class="announcements-text">
+        {{ announcement | safe }}
+      </div>
+      {% endfor %}
     </div>
-    {% endfor %}
-  </div>
+  {% endif %}
 
   <div class="col-md-8 col-md-offset-2 questions">
     <div>
