--- a/templates/error.html
+++ b/templates/error.html
@@ -17,7 +17,12 @@
 <div class="error">
 	<div class="info">
 		<i class="fa fa-info-circle"></i>
-	  	Looks like you have <b>NOT</b> been added to the list of allowed users for this hub. Please contact the hub administrators.
+		Looks like you have <b>NOT</b> been added to the list of allowed users for this hub. Please contact the hub administrators.
+	</div>
+	<div class="text-center">
+		<a role="button" class='btn btn-jupyter' href='{{base_url}}/logout'>
+		Click to retry login
+		</a>
 	</div>
 </div>
 {% else %}
