--- a/templates/error.html
+++ b/templates/error.html
@@ -22,7 +22,7 @@
 	</div>
 	<div class="text-center">
 		<a role="button" class='btn btn-jupyter' href='{{base_url}}/logout'>
-		Click to retry login
+		Tap to try a different account
 		</a>
 	</div>
 </div>
