--- a/templates/login.html
+++ b/templates/login.html
@@ -29,11 +29,7 @@
   </div>
   </div>
   <div class="login-container text-center">
-    {% if next %}
-    <a role="button" class='btn btn-jupyter btn-lg' href='{{authenticator_login_url}}'>
-      Log in to continue
-    </a>
-    {% else %}
+    {% if ('homepage' in custom and custom.homepage["interface_selector"]) and (not next or next == "%2Fhub%2F") %}
     <form class="form-inline">
       <div class="form-group interface-selector">
         <label>After logging in, open: </label>
@@ -48,11 +44,12 @@
         </label>
       </div>
     </form>
-    <a role="button"
-       id="login-button"
-       class='btn btn-jupyter btn-lg'
-       href='{{authenticator_login_url}}'>
-        Log in to start
+    <a role="button" id="login-button" class='btn btn-jupyter btn-lg' href='{{authenticator_login_url}}'>
+      Log in to start
+    </a>
+    {% else %}
+    <a role="button" class='btn btn-jupyter btn-lg' href='{{authenticator_login_url}}'>
+      Log in to continue
     </a>
     {% endif %}
   </div>
