Don't nest config inside 'homepage'
All the other config is also for homepage anyway

--- a/templates/login.html
+++ b/templates/login.html
@@ -29,7 +29,7 @@
   </div>
   </div>
   <div class="login-container text-center">
-    {% if ('homepage' in custom and custom.homepage["interface_selector"]) and (not next or next == "%2Fhub%2F") %}
+    {% if "interface_selector" in custom and custom["interface_selector"] and (not next or next == "%2Fhub%2F") %}
     <form class="form-inline">
       <div class="form-group interface-selector">
         <label>After logging in, open: </label>
