Use the id of hub logo

--- a/templates/page.html
+++ b/templates/page.html
@@ -1,7 +1,7 @@
 {% extends "templates/page.html" %}
 
 {% block logo %}
-<span id="callysto-logo" class="pull-left">
+<span id="jupyterhub-logo" class="pull-left">
     <a href="{{logo_url or base_url}}"><img src='https://www.callysto.ca/wp-content/uploads/2022/08/Callysto-HUB_horizontal.png' alt='CallystoHub' class='jpy-logo' title='Home'/></a>
 </span>
 {% endblock %}
