Allow choosing default interface with default_url option
Can be set in helm values

Ref https://github.com/2i2c-org/infrastructure/issues/1961

--- a/templates/login.html
+++ b/templates/login.html
@@ -34,13 +34,25 @@
       <div class="form-group interface-selector">
         <label>After logging in, open: </label>
         <label class="radio-inline">
-          <input type="radio" name="interface" value="tree" checked>Jupyter Notebook
+          <input type="radio" name="interface" value="tree"
+                 {% if "default_url" not in custom or custom["default_url"] == "/tree" %}
+                 checked
+                 {% endif %}
+                 >Jupyter Notebook
         </label>
         <label class="radio-inline">
-          <input type="radio" name="interface" value="rstudio">RStudio
+          <input type="radio" name="interface" value="rstudio"
+                 {% if "default_url" in custom and custom["default_url"] == "/rstudio" %}
+                 checked
+                 {% endif %}
+                 >RStudio
         </label>
         <label class="radio-inline">
-          <input type="radio" name="interface" value="lab">JupyterLab
+          <input type="radio" name="interface" value="lab"
+                 {% if "default_url" in custom and custom["default_url"] == "/lab" %}
+                 checked
+                 {% endif %}
+                 >JupyterLab
         </label>
       </div>
     </form>
