Update login.html to some text in Spanish
Add initial customizations in Spanish for OHW Feb 27 - Mar 3, 2023, event. Include warning in English for previous users.

--- a/templates/login.html
+++ b/templates/login.html
@@ -61,7 +61,7 @@
     </a>
     {% else %}
     <a role="button" class='btn btn-jupyter btn-lg' href='{{authenticator_login_url}}'>
-      Log in to continue
+      Log in para continuar
     </a>
     {% endif %}
   </div>
@@ -69,12 +69,19 @@
   <div class="col-md-8 col-md-offset-2 details">
     <div class="col-md-6">
       <big class="details-welcome lead">
-      Welcome to the <a href="{{ custom.org.url }}">{{ custom.org.name }}</a> <strong>2i2c JupyterHub</strong>.
+        Bienvenido al <strong>JupyterHub-2i2c</strong> de <a href="{{ custom.org.url }}">{{ custom.org.name }}</a>
+        del evento Intercoonecta OceanHackWeek en español, Feb. 27 - Mar. 3, 2023.
+        <br />
+        (<strong>The interface will be in Spanish by default through March 3, 2023! If you are not 
+        participating in the OHW-español event Feb. 27 - Mar. 3, please use this hub lightly.</strong>)
       </big>
       <br />
+      <br />      
+      Este servicio corre sobre infraestructura de código abierto. Para mayor información, consulte
+      la <a href="https://2i2c.org/pilot">documentación (en inglés)</a>.
       <br />
       This is a pilot service running on open source infrastructure.
-      See <a href="https://2i2c.org/pilot">the 2i2c Pilot documentation</a> for usage and deployment information.</p>
+      See <a href="https://2i2c.org/pilot">the 2i2c Pilot documentation</a> for usage and deployment information.
     </div>
     <div class="col-md-6 details-logos">
       <div class="pull-right">
