Translate operated-by labels to Spanish

--- a/templates/login.html
+++ b/templates/login.html
@@ -23,9 +23,9 @@
         title='hub logo' />
     </a>
   <div id="operated-by">
-      Operated by: <a href="{{ custom.operated_by.url }}">{{ custom.operated_by.name }}</a> |
-      Funded by: <a href="{{ custom.funded_by.url }}">{{ custom.funded_by.name }}</a> |
-      Designed by: <a href="{{ custom.designed_by.url }}">{{ custom.designed_by.name }}</a>
+      Operación: <a href="{{ custom.operated_by.url }}">{{ custom.operated_by.name }}</a> |
+      Financiamiento: <a href="{{ custom.funded_by.url }}">{{ custom.funded_by.name }}</a> |
+      Diseño: <a href="{{ custom.designed_by.url }}">{{ custom.designed_by.name }}</a>
   </div>
   </div>
   <div class="login-container text-center">
