--- a/templates/login.html
+++ b/templates/login.html
@@ -72,8 +72,14 @@
         Bienvenido al <strong>JupyterHub-2i2c</strong> de <a href="{{ custom.org.url }}">{{ custom.org.name }}</a>
         del evento Intercoonecta OceanHackWeek en español, Feb. 27 - Mar. 3, 2023.
         <br />
-        (<strong>The interface will be in Spanish by default through March 3, 2023! If you are not 
-        participating in the OHW-español event Feb. 27 - Mar. 3, please use this hub lightly.</strong>)
+        El interfaz de JupyterLab inicialmente aparecerá en Inglés por defecto. Para cambiarlo al español, 
+        ver las <a href="https://github.com/Intercoonecta/Aula-invertida/blob/main/Intro-a-Jupyter/jupyter-tutorial.md#cambiar-el-interfaz-al-espa%C3%B1ol">instrucciones que hemos desarrollado</a>.
+        
+        <br />
+        (<strong>Welcome to the OceanHackWeek 2i2c JupyterHub! From February 13 through March 3, 2023,
+        this hub will prioritize support for an OceanHackWeek event taking place in Spanish, Feb. 27 - Mar. 3.
+        We will add more information about that event here, soon. If you are not participating in this 
+        event, please use this hub lightly.</strong>)
       </big>
       <br />
       <br />      
